<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <EditText
        android:id="@+id/et_num1"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="number 1" />
    <EditText
        android:id="@+id/et_num2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="number 2" />
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="32sp" />
    <Button
        android:layout_marginTop="18dp"
        android:id="@+id/btn_vis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tup"
        android:textSize="28sp" />

</LinearLayout>